<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_photo">Capture photo</string>
    <string name="accessibility_capture_video_start">Start Recording</string>
    <string name="accessibility_capture_video_stop">Stop Recording</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_menu_button">Menu</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_list_hidden">Mode list closed</string>
    <string name="accessibility_mode_list_shown">Mode list open</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_mode_options">Options</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="accessibility_open_photo_mode">Open photo mode</string>
    <string name="accessibility_open_video_mode">Open video mode</string>
    <string name="accessibility_photo_captured">Photo Captured</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_shutter_button_disabled">Shutter button is now disabled</string>
    <string name="accessibility_shutter_button_enabled">Shutter button is now enabled</string>
    <string name="accessibility_switch_photo_mode">Open photo mode</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_refocus">Switch to Refocus</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_switch_video_mode">Open video mode</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_zoom_announcement">Zoom value is %.1f</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_snackbar_dirty_lens">Lens may be dirty</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="auto">Auto</string>
    <string name="auto_flash_indicator_chip">Flash will fire</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="btn_zoom_minus">Z-</string>
    <string name="btn_zoom_plus">Z+</string>
    <string name="burst">Burst (%1$s Photos)</string>
    <string name="burst_creations">Creations</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_close_speed_dial_description">Close creations menu</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_open_speed_dial_description">Add creations</string>
    <string name="camera_menu_settings_label">SETTINGS</string>
    <string name="create_tiny_planet">Create Tiny Planet</string>
    <string name="deleted">Deleted</string>
    <string name="dialog_ok">OK</string>
    <string name="dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="dirty_lens_popup_title">Is your lens clean?</string>
    <string name="flash_auto_desc">Flash auto</string>
    <string name="flash_off_desc">Flash off</string>
    <string name="flash_on_desc">Flash on</string>
    <string name="flash_options_desc">Flash options</string>
    <string name="fps_30_desc">30 Frames per second</string>
    <string name="fps_60_desc">60 Frames per second</string>
    <string name="fps_desc">Frames per second</string>
    <string name="fps_options_desc">Frames per second options</string>
    <string name="grid_3x3_announce">3 by 3</string>
    <string name="grid_3x3_desc">3 x 3</string>
    <string name="grid_4x4_announce">4 by 4</string>
    <string name="grid_4x4_desc">4 x 4</string>
    <string name="grid_golden_ratio_announce">Golden Ratio</string>
    <string name="grid_golden_ratio_desc">Golden Ratio</string>
    <string name="grid_lines_options_desc">Grid lines options</string>
    <string name="grid_off_announce">Grid Off</string>
    <string name="grid_off_desc">Grid Off</string>
    <string name="hdr_auto_desc">HDR+ auto</string>
    <string name="hdr_off_desc">HDR+ off</string>
    <string name="hdr_on_desc">HDR+ on</string>
    <string name="hdr_plus_options_desc">HDR+ options</string>
    <string name="mode_video">Video</string>
    <string name="panorama_fish_eye_desc">Fish eye panorama</string>
    <string name="panorama_horizontal_desc">Horizontal panorama</string>
    <string name="panorama_vertical_desc">Vertical panorama</string>
    <string name="panorama_wide_desc">Wide angle panorama</string>
    <string name="photo">Photo</string>
    <string name="pref_auto_generate_artifacts_toggle">Auto-generate creations</string>
    <string name="pref_burst_settings">Burst settings</string>
    <string name="pref_burst_title">Smartburst</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_experimental">Experimental</string>
    <string name="pref_gcam_hdr_raw_summary">Save raw DNG files when taking HDR+ images in addition to the standard JPG</string>
    <string name="pref_gcam_hdr_raw_title">HDR+ RAW+JPEG</string>
    <string name="pref_smartburst_summary">Save only the best 8 images from a burst</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="setting_back_camera_photo">Back camera photo resolution</string>
    <string name="setting_back_camera_video">Back camera video resolution</string>
    <string name="setting_front_camera_photo">Front camera photo resolution</string>
    <string name="setting_front_camera_video">Front camera video resolution</string>
    <string name="setting_general">General</string>
    <string name="setting_google_feedback">Send feedback</string>
    <string name="setting_google_help">Help</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="shortcut_selfie_long_label">Take a selfie</string>
    <string name="shortcut_selfie_short_label">Selfie</string>
    <string name="shortcut_video_long_label">Take a video</string>
    <string name="shortcut_video_short_label">Video</string>
    <string name="timer_10_seconds_desc">10 Seconds</string>
    <string name="timer_3_seconds_desc">3 Seconds</string>
    <string name="timer_off_desc">Timer off</string>
    <string name="timer_options_desc">Timer options</string>
    <string name="timer_seconds_desc">Seconds</string>
    <string name="tiny_planet_rotate">Rotate</string>
    <string name="tiny_planet_zoom">Zoom</string>
    <string name="undo">UNDO</string>
    <string name="undo_delete">Undo Delete</string>
    <string name="volume_key_shutter">Shutter</string>
    <string name="white_balance_auto_desc">Auto</string>
    <string name="white_balance_cloudy_desc">Cloudy</string>
    <string name="white_balance_fluorescent_desc">Fluorescent</string>
    <string name="white_balance_incandescent_desc">Tungsten</string>
    <string name="white_balance_options_desc">White balance options</string>
    <string name="white_balance_sunny_desc">Sunny</string>
</resources>