<?xml version="1.0" encoding="utf-8"?>
<shortcuts
  xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:icon="@drawable/ic_selfie" android:enabled="true" android:shortcutId="selfie" android:shortcutShortLabel="@string/shortcut_selfie_short_label" android:shortcutLongLabel="@string/shortcut_selfie_long_label">
        <intent android:targetPackage="com.google.android.GoogleCamera" android:action="android.media.action.STILL_IMAGE_CAMERA" android:targetClass="com.google.android.apps.camera.legacy.app.activity.CameraImageActivity">
            <extra android:name="android.intent.extra.USE_FRONT_CAMERA" android:value="true" />
        </intent>
    </shortcut>
    <shortcut android:icon="@drawable/ic_video" android:enabled="true" android:shortcutId="video" android:shortcutShortLabel="@string/shortcut_video_short_label" android:shortcutLongLabel="@string/shortcut_video_long_label">
        <intent android:targetPackage="com.google.android.GoogleCamera" android:action="android.media.action.VIDEO_CAMERA" android:targetClass="com.android.camera.CameraVideoShortcutActivity" />
    </shortcut>
</shortcuts>