<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/camera_undo_deletion_bar" android:visibility="gone" android:importantForAccessibility="no" style="@style/UndoBar"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center|left" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginRight="60.0dip" android:text="@string/deleted" android:layout_weight="1.0" android:importantForAccessibility="no" style="@style/UndoBarTextAppearance" />
    <View style="@style/UndoBarSeparator" />
    <TextView android:id="@id/camera_undo_deletion_button" android:clickable="true" android:layout_marginLeft="8.0dip" android:text="@string/undo" android:drawableLeft="@drawable/ic_menu_revert_holo_dark" android:contentDescription="@string/undo_delete" style="@style/UndoButton" />
</LinearLayout>