<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/flash_options" style="@style/expanded_options"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:optionsbar="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.camera.optionsbar.view.ExpandedOption android:id="@id/flash_off" optionsbar:camera_option_label="@string/flash_off_desc" optionsbar:camera_option_icon="@drawable/ic_flash_normal_off" optionsbar:camera_option_selected="false" style="@style/detailed_expanded_option" />
    <com.google.android.apps.camera.optionsbar.view.ExpandedOption android:id="@id/flash_auto" optionsbar:camera_option_label="@string/flash_auto_desc" optionsbar:camera_option_icon="@drawable/ic_flash_normal_auto" optionsbar:camera_option_selected="false" style="@style/detailed_expanded_option" />
    <com.google.android.apps.camera.optionsbar.view.ExpandedOption android:id="@id/flash_on" optionsbar:camera_option_label="@string/flash_on_desc" optionsbar:camera_option_icon="@drawable/ic_flash_normal_on" optionsbar:camera_option_selected="false" style="@style/detailed_expanded_option" />
</LinearLayout>