<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:orientation="vertical" android:id="@id/advice_dialog_title" android:paddingTop="24.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dirty_lens_popup_title" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:orientation="vertical" android:id="@id/advice_dialog_message" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dirty_lens_popup_text" />
    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="24.0dip" android:paddingEnd="8.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/snackbar_blue" android:gravity="center" android:layout_gravity="center" android:id="@id/advice_settings_textview" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="36.0dip" android:minWidth="64.0dip" android:text="@string/camera_menu_settings_label" android:fontFamily="sans-serif-medium" android:paddingStart="8.0dip" android:paddingEnd="12.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/snackbar_blue" android:gravity="center" android:layout_gravity="center" android:id="@id/advice_ok_textview" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="36.0dip" android:minWidth="64.0dip" android:text="@string/dialog_ok" android:fontFamily="sans-serif-medium" android:paddingStart="12.0dip" android:paddingEnd="8.0dip" />
    </LinearLayout>
</LinearLayout>