<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/camera_black_background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <com.google.android.apps.camera.legacy.app.tinyplanet.TinyPlanetPreview android:layout_gravity="center_horizontal" android:id="@id/preview" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <TextView android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tiny_planet_zoom" />
        <SeekBar android:id="@id/zoomSlider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="1000" android:progress="500" android:contentDescription="@string/tiny_planet_zoom" />
        <TextView android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/tiny_planet_rotate" />
        <SeekBar android:id="@id/angleSlider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="360" android:progress="0" android:contentDescription="@string/tiny_planet_rotate" />
        <Button android:id="@id/createTinyPlanetButton" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/create_tiny_planet" />
    </LinearLayout>
</RelativeLayout>